# fiap-sub-fase4-sales

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_sales_table.py
docs/: c4-component.md  performance-notes.md  sequence-diagrams.md
src/application/use_cases/: initiate_sale.py  list_sold_vehicles.py  process_payment_callback.py
src/domain/entities/: sale.py
src/domain/repositories/: sale_repository.py
src/infrastructure/auth/: oauth2.py
src/infrastructure/database/: database.py  models.py  sale_repository_impl.py
src/infrastructure/http/: catalog_client.py
src/presentation/: main.py
src/presentation/routers/: sales.py  token.py  webhook.py
src/presentation/schemas/: sale_schemas.py  webhook_schemas.py
tests/integration/: test_initiate_sale_contract.py  test_payment_webhook_contract.py  test_public_endpoints.py  test_sold_listing_contract.py
tests/unit/application/: test_initiate_sale.py  test_list_sold_vehicles.py  test_process_payment_callback.py
tests/unit/domain/: test_sale_entity.py
tests/unit/infrastructure/: test_catalog_client.py  test_oauth2.py  test_sale_repository_impl.py
